Improve IP whitelist filter and CORS configuration
- Fix IP whitelist filter to block requests when whitelist is empty but enabled
- Update error message to always show blocked IP address
- Add OPTIONS request handling for CORS preflight in IP whitelist filter
- Improve IPv4 IP address extraction in IpAddressUtil
- Convert IPv6 localhost addresses to IPv4 (::1 -> 127.0.0.1)
- Prefer IPv4 addresses when multiple IPs are available
- Fix CORS configuration to use proper headers list
- Add localhost to CORS allowed origins